syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package avalanche.vault.ticket;

message GetOneTicketRpc {

  message Request{

    string ticket_id = 1;
  }

  message Response {

    enum ValidityKind {
      EARLY = 0;
      VALID = 1;
      LATE = 2;
      UNKNOWN = 3;
    }

    message Validity {

      google.protobuf.Timestamp from = 1;
      google.protobuf.Timestamp to = 2;

      google.protobuf.Duration span = 3;

      ValidityKind Kind = 4;
    }

    string name = 1;

    string store_id = 2;

    repeated Validity validities = 4;

    bool is_valid = 5;
  }
}

message GetManyTicketsRpc {

  message Request{
  }

  message Response {

    string ticket_id = 1;

    string store_id = 2;

    string name = 3;
  }
}

service TicketService {
  
  rpc GetOne(GetOneTicketRpc.Request) returns (GetOneTicketRpc.Response);
  rpc GetMany(GetManyTicketsRpc.Request) returns (stream GetManyTicketsRpc.Response);
}